[JENKINS-56018] Remove jaxb libraries and instructions for Jenkins < 2.164